--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -571,3 +571,45 @@
   language =	{english},
   hyphenation =	{english},
 }
+
+@book { howell1965early,
+  author =	{Francis Clark Howell},
+  title =	{Early Man},
+  year =	{1965},
+  publisher =	{Time Life},
+  series =	{LIFE Nature Library},
+  url =		{http://www.amazon.com/EARLY-MAN-Life-Nature-Library/dp/B000I1PZB0},
+  urldate =	{2013-07-08},
+}
+
+@book { ivanova1965geologicheskiy,
+  author =	{Ирина Константиновна Иванова},
+  title =	{Геологический возраст ископаемого человека},
+  publisher =	{Наука},
+  year =	{1965},
+  language =	{russian},
+  hyphenation =	{russian},
+  url =		{http://books.google.com/books/about/%D0%93%D0%B5%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B2%D0%BE%D0%B7%D1%80%D0%B0%D1%81.html?id=MOzISAAACAAJ},
+  urldate =	{2013-07-08},
+}
+
+@book { ivanova1972geologische,
+  author =	{Irina Konstaninowna Ivanova},
+  title =	{Das geologische Alter des fossilen Menschen},
+  year =	{1972},
+  location =	{Stuttgart},
+  isbn =	{9783170790292},
+  language =	{german},
+  hyphenation =	{german},
+}
+
+@book { osborn1910age,
+  author =	{Henry Fairfield Osborn},
+  title =	{The age of mammals in Europe, Asia and North America},
+  location =	{New York},
+  year =	{1910},
+  url =		{http://archive.org/details/ageofmammalsineu00osbo},
+  urldate =	{2013-07-08},
+  language =	{english},
+  hyphenation =	{english},
+}
