--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -403,7 +403,87 @@ arise from blood relations, was first established.  The idea of the unity of
 mankind received here in reality, although, obviously, unconsciously, even
 greater possibilities for its development.
 
-. . .
+Thanks to the discovery of fire, man was able to survive the Ice Age---those
+great changes and variations of the climate and the state of the biosphere,
+which are now being scientifically uncovered before us in the alterations with
+the so-called interglacial periods---at least, three in number---in the
+Northern Hemisphere.  He survived them, even though numerous other lage mammals
+disappeared then from the face of the Earth.  It is possible that he aided
+their extinction.
+
+The Ice Age has not ended, and extends to the present time.  We are living in
+an interglacial period---the warming is still continuing,---but man has adapted
+to these conditions so well that he does not notice the Ice Age.  The
+Scandinavian Glacier thawed in the location of St.\ Petersburg and Moscow a few
+thousand years ago when man had already developed domestication and
+agriculture.\footnoteEd{
+	The time of the maximum of the last glaciation is determined today to
+	be 18--20 thousand years ago by the method of carbon dating.  It did
+	not reach Moscow, but only the Valdai Hills; the ice cover thawed about
+	10--12 thousand years ago in the outskirts of Leningrad.
+	\parenNoteAuth{Ed.}
+}
+
+Hundreds of thousands of generations passed in the history of mankind during
+the Ice Age.
+
+However, we can hardly doubt today that man (probably, not the genus Homo)
+existed already much earlier---at latest, at the end of the Pliocene, a few
+million years aro.  The Piltdown Man in Southern England at the end of the
+Pliocene, morphologically different from contemporary man, already possessed
+stone implements, and, obviously, unpreserved implements out of wood, and,
+possibly, bone.  His brain apparatus was as developed as in contemporary
+man.\footnoteEd{
+	The skull from the Piltdown cave, constructed from fragmentary remains
+	in 1912 by Charles Dawson, was fabricated either by him, or by other
+	irresponsible anthropologists.  It is a skull of an entirely
+	contemporary person with jaws of a hominid ape.
+	(\cite{howell1965early})
+	\parenNoteAuth{Ed.}
+}
+The Sinanthropus of Northern China, living, apparently, at the beginning of the
+Post-Pliocene in an area where the glacier, apparently, did not reach,
+controlled fire and possessed implements.\footnoteEd{
+	Sinanthropus lived 350--400 thousand years ago, \ie\ in the middle of
+	the Pleistocene, somewhat later than V.\ I.\ Vernadsky thought.
+	However, his supposition that the genus Homo existed already ``a few
+	million years ago'', turned out to be correct.  The famous excavations
+	of Dr.\ L.\ Leakey in the Olduvai Gorge on the border of Kenya and
+	Tanzania, widely covered in scientific and popular science journals,
+	showed that primitive man in Eastern Africa, classified as the peculiar
+	species of Homo habilis (handyman), undoubtedly lived 1,800--1,900
+	thousand years ago.  The later discoveries of R.\ Leakey on the eastern
+	shore of Lake Rudolph led to the wide-spread oppinion that man lived
+	already 3 million years ago in Eastern Africa, although that number is
+	not credible, since the fragmentary remains of the skull were found in
+	scree, and it is not known what layer they originate from.  The
+	contemporary species Homo sapiens (wise man) emerged 40--45 thousand
+	years ago not in Africa, but in the fairly northern latitudes of
+	Europe and Asia, probably not without the influence of, and adaptation
+	to the extreme conditionns of the Ice Age.  (See
+	\cite{ivanova1965geologicheskiy}; also in German:
+	\cite{ivanova1972geologische}.)
+	\parenNoteAuth{Ed.}
+}
+
+It is possible that A.\ P.\ Pavlov was quite right when he supposed that the
+Ice Age, the first glaciation of the Northern Hemisphere, began at the end of
+the Pliocene, and at that time a new organism, possessing an exceptional
+central nervous system, which led, in the end, to the development of cognition,
+and is now being manifested in the transition of the \emph{biosphere into the
+noosphere,} emerged in the conditions approaching the severe ones of
+glaciation.
+
+Apparently, all morphologically different types of man, the different genera
+and species were already communicating with each other, were distinct from the
+general mass of living matter from the beginning, possessed creative work of a
+drastically different character than that of surrounding life, and could
+interbreed with each other.  \emph{The unity of mankind was developing
+tempestuously} in this way.  Apparently, Osborn\footnote{\cite{osborn1910age}}
+was right that man on the border between the Pliocene and the Post-Pliocene,
+still lacking permanent settlements, possessed great mobility, traveled from
+place to place, was recognizing and manifesting his strong
+distinctness---strove toward independence from his surroundings [environment].
 
 \Section % 22
 
