Synchronizing with the repository.

--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -480,15 +480,25 @@ social sciences, but also natural scientists what conclusions and inferences to
 make, in order for them to completely correspond to the philosophical ``laws''.
 V.\ I.\ Vernadsky could not accept such a philosophy, for which he was
 criticized by A.\ M.\ Deborin, who accused him of
-idealism.\footnote{\cite{deborin1932problema}}  V.\ I.\ Vernadsky responded to
+idealism.\footnote{\cite{deborin1932problema}}  V.~I.~Vernadsky responded to
 this criticism with great dignity, even though it painfully wounded his
 pride.\footnote{\cite{vernadsky1933povodu}}  He always thought that an unbiased
 collection of as many facts about the topic of investigation as possible, their
 subsequent objective generalization, and, only afterward, a philosophical
 understanding must be the basis for every investigation.  By the way,
-V.\ I.\ Vernadsky regarded Karl Marx as a scientist with great respect
+V.~I.~Vernadsky regarded Karl Marx as a scientist with great respect
 precisely because a great amount of thoroughly and conscientiously collected
 material lay at the foundation of the
 \btcite{marx2010capital-v1}\nocite{marx2007capital-v2,marx2010capital-v3}.
+
+The development of V.\ I.\ Vernadsky's philosophical views is reviewed more in
+depth in the article ``From the Editorial Board'' in the mentioned book
+\tciteo{vernadsky1988filosofskie}.  Wide-ranging commentaries on the work
+\rtitle{Scientific Thought as a Planetary Phenomenon} were published in that
+book, as well as in the form of appendices, articles by B.~M.~Kedrov,
+I.~V.~Kuznetsov, S.~R.~Mikulinskiy, and A.~L.~Yanshin written at various times,
+in which the questions of V.~I.~Vernadsky's worldview and his teaching about
+the gradual transition of the biosphere into the noosphere are reviewed from
+different points of view.
 
 . . .
