Added font chache building instructions.
* Added a <tex/Makefile> rule for building the font chache.

* Added instruction to <README.md> about how to build the font cache
  before `make`ing the output document.

* Some more test translation paragraphs from the foreword.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -13,6 +13,12 @@
   language = {french},
 }
 
+@article { voprosyIstorii1988n1,
+  journal =	{Вопросы истории естествознания и техники},
+  year =	{1988},
+  number =	{1},
+}
+
 @article { yanshin1966tektonika,
   author =	{Александр Леонидович Яншин},
   title =	{Тектоника Евразии},
