--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -501,4 +501,18 @@ in which the questions of V.~I.~Vernadsky's worldview and his teaching about
 the gradual transition of the biosphere into the noosphere are reviewed from
 different points of view.
 
+We have significantly reduced the commentary in the present edition, which is
+indented for the widest possible circle of readers, transferring the necessary
+part of it to footnotes.  The majority of editorial comments have been updated.
+
+V.~I.\ Vernadsky's articles ``On the Scientific World View'' and ''A Few Words
+about the Noosphere'', as well as fragments (six sections) from the manuscript
+\rtitle{Scientific Thought as a Planetary Phenomenon}, which, as was proper,
+were not included in the text by the author himself.  The reader may be
+interested in the content of these fragments, and obtaining the the small-run
+journal \refparencite{voprosyIstorii1988n1} is fairly difficult.  Therefore, we
+decided to reproduce them in the present edition, after comparison with the
+author's original, and the correction of errata and modifications in the
+journal's version.
+
 . . .
