--- a/tex/thought.tex
+++ b/tex/thought.tex
@@ -144,8 +144,10 @@
 %	  \end{otherlanguage}%
 %	}}
 
-% Use when running pdflatex to generate the font cache, instead of the above
-% (when avoiding running out ouf TeX counters by disabling <bigfoot>):
+% Uncommend the following macros when running pdflatex to generate the font
+% cache, instead of the above (when avoiding running out ouf TeX counters by
+% disabling <bigfoot>).  Also, uncomment the substitute for \footnoteRus above.
+%
 %\newcommand{\footnoteEd}[1]{\footnote{#1}}
 %\newcommand{\footnoteTransl}[1]{\footnote{#1}}
 %\newcommand{\footnotemarkTransl}{\footnotemark}
