--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -57,6 +57,20 @@
   hyphenation =	 {russian},
 }
 
+@article { vernadsky1902nauchnom,
+  journal = {Вопросы философии и психологии},
+  title = {О научном мировоззрении},
+  userb = {On the Scientific World View},
+  author = {Владимир Иванович Вернадский},
+  number = {65},
+  pages = {1409-1465},
+  year = {1902},
+  url = {http://www.runivers.ru/lib/journal/journal3665/43830/},
+  urldate = {2013-12-14},
+  language = {russian},
+  hyphenation = {russian},
+}
+
 @book { vernadsky1906mineralogy,
   author =	 {Владимир Иванович Вернадский},
   title = 	 {Минералогия и кристаллография: Лекции для студентов мед. фак.
@@ -561,18 +575,6 @@
   hyphenation = {russian},
 }
 
-@book { vernadsky2001himicheskoe,
-  title = {Химическое строение биосферы земли и ее окружения},
-  userb = {The Chemical Structure of the Earth's Biosphere, and its
-	  Surroundings},
-  author = {Владимир Иванович Вернадский},
-  url = {http://vernadsky.lib.ru/e-texts/archive/Vernadsky_V.I.__Himicheskoje_Strojenije_Biosfery_Zemli_i_eje_Okruzhenija__2001_376s.djvu},
-  year = {2001},
-  publisher = {Наука},
-  hyphenation = {russian},
-}
-
-
 @inbook { vernadsky1980problemy,
   title = {Проблемы биогеохимии},
   author = {Владимир Иванович Вернадский},
@@ -639,6 +641,14 @@
   title =	{В. И. Вернадский как историк науки},
   author =	{С. Р. Микулинский},
   pages =	{21},
+}
+
+@inbook { vernadsky1988nauchnom,
+  crossref =	{vernadsky1988trudy},
+  title =	{О научном мировоззрении},
+  userb =	{On the Scientific World View},
+  author =	{Владимир Иванович Вернадский},
+  pages =	{42-80},
 }
 
 @article { vernadsky1991dnevnik1938,
@@ -721,5 +731,16 @@
   url = {http://vernadsky.lib.ru/e-texts/archive/thought.html},
   urldate = {2012-07-15},
   language = {russian},
+  hyphenation = {russian},
+}
+
+@book { vernadsky2001himicheskoe,
+  title = {Химическое строение биосферы земли и ее окружения},
+  userb = {The Chemical Structure of the Earth's Biosphere, and its
+	  Surroundings},
+  author = {Владимир Иванович Вернадский},
+  url = {http://vernadsky.lib.ru/e-texts/archive/Vernadsky_V.I.__Himicheskoje_Strojenije_Biosfery_Zemli_i_eje_Okruzhenija__2001_376s.djvu},
+  year = {2001},
+  publisher = {Наука},
   hyphenation = {russian},
 }
