--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -485,9 +485,69 @@ still lacking permanent settlements, possessed great mobility, traveled from
 place to place, was recognizing and manifesting his strong
 distinctness---strove toward independence from his surroundings [environment].
 
-\Section % 22
 
-. . .
+\Section % 22
+In reality, this \emph{unity} of mankind, his \emph{distinction from everything
+living}, this new form of \emph{power of the living organism} over the
+biosphere, his greater \emph{independence} from \emph{his conditions} than that
+of all other organisms is the main factor which, in the end, emerged in the
+geologically evolutionary process of the noosphere's creation.  The unity of
+human societies, their intercommunication and their power---the striving for
+the manifestation of power---over the environment were manifested tempestuously
+over the course of many generations, before they were detected, and were
+recognized ideologically.
+
+Of course, this was not a conscious phenomenon; it formed in the struggle
+during clashes; there were mutual exterminations of people, times of
+cannibalism and hunting of each other, but, as a general rule, these three
+expressions in fact of the future idea of mankind's unity, his drastic
+distinction from everything living, and the striving to master the environment
+penetrate and create all of mankind's history, at least during the last ten
+thousand years.  They have prepared the new contemporary striving to understand
+them ideologically as a basis of human life.
+
+We can trace its existence in the ideological aspect with scientific precision
+in reality only over ten thousand years, maximum.  But then, we cannot reach
+farther than four thousand years in written sources, since writing signs do not
+reach much farther, and the system of alphabetic characters hardly goes beyond
+three thousand years ago.  We can expect the most ancient sources of real
+echoes of ideological constructs at most a thousand years before the discovery
+of ideographic writing.  Consequently, we could hardly reach much earlier than
+six thousand years ago in preserved legendary works, taking into account the
+presently unusual oral ability to pass ideological constructs, formed by the
+peculiar civilizations of that time, through generations.  The latest
+archaeological discoveries reveal the unexpected fact that civilized city life,
+the conditions of cultural city life customary in our everyday experience, the
+peaceful trade and technology of life with achievements considered impossible
+earlier, after oblivion and after millennia, were sometimes discovered anew;
+they allow us to think that complex civilized city life has existed for a long
+time---perhaps, millennia---before six thousand years ago.  All of these
+achievements have been disseminated over the course of millennia by complex
+pathways in all continents, including, apparently, the New World in some
+period.  From mankind's point of view the New World was not new, and the
+culture, even the scientific one, of its states at the end of the XV--beginning
+of the XVI century---the time of its discovery by Western European
+civilization---was not lower, but, in some respects, even higher than the
+scientific knowledge of Western Europeans.  It suffered defeat only as a
+consequence of the fact that military technology, firearms were unknown in
+America, but became common in the life of Western Europeans a few decades
+before the discovery of America.
+
+The picture of the multi-millennial history of the material interaction of
+civilizations, separate historical centers through Eurasia, parts of Africa,
+from the Atlantic to the Pacific and Indian Ocean, at times---with
+multi-century breaks---spreading through the oceans, is being clarified.  It is
+exceptionally common that cultural centers were located in few places.  The
+most ancient are: the Chaldean interfluvial area established by Breasted, the
+Nile plains, Egypt, and pre-Arian Northern India.  They were all in
+multi-millennial contact.  Not much later, no more than three thousand years
+ago, the Northern Chinese center emerges.  But the scientific research here has
+been going on for only the last three--four years, and has been obstructed by
+the savage Japanese invasion.  There may be unexpected finds here.  Apparently,
+a temporary center existed on the shore of the Pacific Ocean---in Korea, or
+China---and on the shore of the Indian Ocean---in Annam,---whose role is still
+completely unclear, and great discoveries are possible.
+
 
 \Section % 23
 
