--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -505,7 +505,7 @@ We have significantly reduced the commentary in the present edition, which is
 indented for the widest possible circle of readers, transferring the necessary
 part of it to footnotes.  The majority of editorial comments have been updated.
 
-V.~I.\ Vernadsky's articles ``On the Scientific World View'' and ''A Few Words
+V.~I.\ Vernadsky's articles \btcite{vernadsky1902nauchnom} and ''A Few Words
 about the Noosphere'', as well as fragments (six sections) from the manuscript
 \rtitle{Scientific Thought as a Planetary Phenomenon}, which, as was proper,
 were not included in the text by the author himself.  The reader may be
@@ -514,5 +514,13 @@ journal \refparencite{voprosyIstorii1988n1} is fairly difficult.  Therefore, we
 decided to reproduce them in the present edition, after comparison with the
 author's original, and the correction of errata and modifications in the
 journal's version.
+
+The article \btcite{vernadsky1902nauchnom} was first published in the journal
+\ctciteo{vernadsky1902nauchnom} in 1902, and was re-published a few more times
+subsequently in various collections with little changes during Vernadsky's
+life.\footnoteEd{
+	We are re-publishing it according to the edition
+	\fullcite{vernadsky1988nauchnom}.
+}
 
 . . .
